# phasher

./: Cargo.toml  README.md
src/: cli.rs  errors.rs  hashing.rs  main.rs
